In re_shutdown() mark interface as down since otherwise we will panic if interrupt comes in later on, which can happen in some uncommon cases.

Another possible fix is to call re_detach() instead of re_stop(), like
ve(4) does, but I am not sure if the latter is really RTTD, so that stick
with this one-liner for now.

PR:		kern/80005
Approved by:	silence on -arch, no reply from selected network gurus

Former-commit-id: 472ada5d6360909365f62659581c9e93a04fe7e2